# dellve_py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
dellve/include/: DELLveBenchmark.hpp  DELLveError.hpp  DELLveException.hpp  DELLveOperation.hpp  DELLveOperationController.hpp  DELLveOperationProxy.hpp  DELLvePluginController.hpp  DELLvePluginProxy.hpp
dellve/src/: DELLvePy.cpp
dellve/test/: CMakeLists.txt
dellve/test/cpp/: CMakeLists.txt
dellve/test/cpp/PluginProxyTest/: CMakeLists.txt  PluginProxyTest.cpp  PluginProxyTestPlugin.cpp
dellve/test/python/: CMakeLists.txt  dellve_test_plugin.cpp  delve_test.py
dellve_benchend/: service.py
dellve_benchend/dellve_system_manager/: __init__.py  api.py  nvidia.py
dellve_benchend/dellve_system_monitor/: api.py  nvidia.py  stub.py
dellve_system_manager/: system_manager.py
dellve_system_manager/dellve_managers/: nvidia.py
