################################################################################
#	DELLve Unit Tests Build
################################################################################

cmake_minimum_required (VERSION 3.4)

project (dellve_py_test)

enable_testing()

add_subdirectory(dellve/test)
