################################################################################
#	DELLve C/C++ Tests 
################################################################################

# add_subdirectory(cpp)

################################################################################
#	DELLve Python Tests 
################################################################################

add_subdirectory(python)